--- a/UT5/Ejercicio01/express-server/db/tasks.json
+++ b/UT5/Ejercicio01/express-server/db/tasks.json
@@ -1,1 +1,16 @@
-[]
+[
+  {
+    "titulo": "titulo1",
+    "descripcion": "algo1",
+    "estado": "completado",
+    "fecha": "2024-01-10",
+    "hora": "18:11"
+  },
+  {
+    "titulo": "titulo2",
+    "descripcion": "algo2",
+    "estado": "completado",
+    "fecha": "2024-01-03",
+    "hora": "19:08"
+  }
+]
